fix bags for tester

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
             </svg>
 
         </a>
-        <div class="header__right d-flex align-items-center">
+        <div class="header__right d-flex align-items-center justify-content-end">
             <nav class="header__nav">
                 <ul class="header__nav-list list-reset d-flex align-items-center">
                     <li class="header__nav-item">
@@ -46,11 +46,6 @@
                                 <li class="header__dropdown_item">
                                     <a class="dropdown-item header__dropdown_item-link" href="events.html">
                                         Мероприятия
-                                    </a>
-                                </li>
-                                <li class="header__dropdown_item">
-                                    <a class="dropdown-item header__dropdown_item-link" href="contacts.html">
-                                        Контакты
                                     </a>
                                 </li>
                             </ul>
@@ -107,6 +102,12 @@
                             Вакансии
                         </a>
                     </li>
+
+                    <li class="header__nav-item">
+                        <a href="contacts.html" class="header__link ">
+                            Контакты
+                        </a>
+                    </li>
                 </ul>
             </nav>
 
@@ -153,11 +154,6 @@
                                     <li class="header__accordion-item-item">
                                         <a href="events.html" class="header__accordion-item-link">
                                             Мероприятия
-                                        </a>
-                                    </li>
-                                    <li class="header__accordion-item-item">
-                                        <a href="contacts.html" class="header__accordion-item-link">
-                                            Контакты
                                         </a>
                                     </li>
                                 </ul>
@@ -218,6 +214,13 @@
                         <div class="header__accordion-item-head">
                             <a href="work.html" class="header__accordion-link">
                                 Вакансии
+                            </a>
+                        </div>
+                    </div>
+                    <div class="header__accordion-item header__accordion-mobile">
+                        <div class="header__accordion-item-head">
+                            <a href="contacts.html" class="header__accordion-link">
+                                Контакты
                             </a>
                         </div>
                     </div>
