--- a/src/partials/licenses/licenses.html
+++ b/src/partials/licenses/licenses.html
@@ -608,7 +608,7 @@
     <div class="modal-dialog-centered modal-dialog licenses__modal-dialog">
       <div class="modal-content licenses__modal-content">
         <div class="modal-body licenses__modal-body">
-          <img src="../img/licenses.png">
+          <img src="./img/licenses.png">
         </div>
       </div>
     </div>
