--- a/src/scss/components/history/history.scss
+++ b/src/scss/components/history/history.scss
@@ -90,8 +90,8 @@
 
     &-btn {
       text-transform: uppercase;
-      font-family: var(--text-sofia-condensed);
-      font-size: var(--text-size-12);
+      font-family: "Sofia Sans Semi Condensed";
+      font-size: var(--text-size-14);
       line-height: var(--text-height-135);
       padding-bottom: 2px;
       border-bottom: 1px solid var(--gray-secondary);
