--- a/src/scss/components/qp/qp.scss
+++ b/src/scss/components/qp/qp.scss
@@ -276,6 +276,7 @@
     &-item {
       font-size: var(--text-size-14);
       line-height: var(--text-height-120);
+      font-family: "Sofia Sans Semi Condensed";
       text-transform: uppercase;
       opacity: 70%;
     }
