--- a/src/scss/components/licenses/licenses.scss
+++ b/src/scss/components/licenses/licenses.scss
@@ -247,9 +247,9 @@
 
     &-btn {
       text-transform: uppercase;
-      font-family: var(--text-sofia-condensed);
-      font-size: var(--text-size-14);
-      line-height: var(--text-height-100);
+      font-family: "Sofia Sans Semi Condensed";
+      font-size: var(--text-size-16);
+      line-height: var(--text-height-135);
       padding-bottom: 2px;
       border-bottom: 1px solid var(--gray-secondary);
     }
