--- a/src/scss/components/main/facts.scss
+++ b/src/scss/components/main/facts.scss
@@ -68,6 +68,7 @@
       line-height: 120%;
       font-weight: 300;
       max-width: 271px;
+      font-family: "Sofia Sans";
     }
 
     &:first-child {
