--- a/src/scss/components/main/news.scss
+++ b/src/scss/components/main/news.scss
@@ -67,8 +67,7 @@
     &-text {
       font-size: var(--text-size-16);
       line-height: var(--text-height-120);
-      color: var(--black);
-      opacity: 70%;
+      color: var(--black-70);
       font-weight: 300;
       overflow: hidden;
       display: -webkit-box;
