--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,6 +7,7 @@
   --container-offset-mobile: 24px;
 
   --black: #272727;
+  --black-70: #666666;
   --white: #FFFFFF;
   --green: #00B982;
   --blue: #45ADC7;
