--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -92,6 +92,7 @@
       font-size: 2rem;
       line-height: 130%;
       margin-bottom: 4px;
+      font-weight: 500;
       text-transform: uppercase;
     }
 
