--- a/src/scss/components/main/after-hero.scss
+++ b/src/scss/components/main/after-hero.scss
@@ -87,6 +87,7 @@
     font-size: 1.6rem;
     line-height: 120%;
     font-weight: 300;
+    color: var(--black-70);
     transition: color .3s ease-in-out;
   }
 
