--- a/src/scss/components/main/facts.scss
+++ b/src/scss/components/main/facts.scss
@@ -27,10 +27,10 @@
   }
 
   &__text {
-    opacity: 70%;
     font-size: 2rem;
     line-height: 120%;
     font-weight: 400;
+    color: var(--black-70);
     font-family: "Sofia Sans";
     text-transform: uppercase;
   }
@@ -63,11 +63,11 @@
     }
 
     &-text {
-      opacity: 70%;
       font-size: 1.6rem;
       line-height: 120%;
       font-weight: 300;
       max-width: 271px;
+      color: var(--black-70);
       font-family: "Sofia Sans";
     }
 
